deploy/k8s/10-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wx-explore-api
  labels:
    app: wx-explore-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wx-explore-api
  template:
    metadata:
      labels:
        app: wx-explore-api
    spec:
      containers:
        - name: wx-explore-api
          image: kallsyms/wx_explore:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: "1G"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: wx-explore-api
spec:
  selector:
    app: wx-explore-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
